--- a/local/pressure-washing-barnby-dun.html
+++ b/local/pressure-washing-barnby-dun.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title></title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-???????????????.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-barnby-dun.html">
 <meta name="description" content="">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
@@ -139,8 +139,8 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p></p>
 <p></p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
-title="Driveway pressure washing in ??????????  village  ???????????????">
-professional driveway pressure washing services in ?????????????????   village ????????????????? FAQS"></a></p>
+title="Driveway pressure washing in Barnby-Dun">
+professional driveway pressure washing services in Barnby-Dun Doncaster FAQS"></a></p>
 <img src="/images/pressure-washing-driveway.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -159,8 +159,8 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
-title="Patio and paving  pressure cleaning in ???????????????      ????????????????">
-professional patio pressure washing services ??????????????      ???????????? FAQS"</a></p>
+title="Patio and paving  pressure cleaning in Barnby-Dun">
+professional patio pressure washing services Barnby-Dun, Doncaster FAQS"</a></p>
 <img src="/images/pressure-washing-patios.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -234,7 +234,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/local/pressure-washing-??????????????????????????????.html",
+"url": "https://homerepairs4u.com/local/pressure-washing-barnby-dun.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -247,10 +247,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.5352,???????????????????????
-"longitude": -1.0522?????????????????????
+"latitude": 53.5743,
+"longitude": -1.1081
 },
-"areaServed": "????????????????????????????????????",
+"areaServed": "Barnby-Dun",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
