--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Section 1 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Pressure Washing</h2>
+<h2>Pressure Washing Doncaster</h2>
 <p>Pressure washing is a fast and effective way to clean outdoor surfaces and restore their original look. Over time, driveways, paths, walls, decking and roofs can become dirty, slippery and stained with moss, algae and grime. Professional pressure washing removes this build-up safely, improving both appearance and safety. Clean surfaces not only look better but also last longer when kept free from damaging dirt and growth. Pressure washing is ideal for freshening up your property, preparing surfaces for painting or simply making everything look clean, tidy and well cared for.</p>
 <p>Looking to restore your driveway, patio, or outdoor surfaces? Our
 <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
@@ -139,7 +139,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 2 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Guttering Services</h2>
+<h2>Guttering Services Doncaster</h2>
 <p>Guttering services are essential for protecting your home from water damage. Over time, gutters can fill with leaves, moss and debris, stopping rainwater from flowing away properly. Cleaning and clearing your gutters helps prevent blockages, leaks and overflowing that can damage walls, roofs and foundations. If your gutters are leaking, sagging or broken, repairs can restore them before bigger problems develop. In cases where gutters are badly damaged or outdated, full replacement gives your home a fresh, reliable system that works efficiently. Regular gutter maintenance keeps rainwater under control, protects your property, and saves money by avoiding costly structural repairs later on.</p>
 <img src="/images/cleaned-gutters-before-after.webp"
 alt="Guttering services in Doncaster including cleaning, clearing, repairs and full gutter replacement for homes"
@@ -151,7 +151,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 3 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Exterior Decorating</h2>
+<h2>Exterior Decorating Doncaster</h2>
 <p>External decorating improves both the look and protection of your property. External house painting refreshes tired walls, boosts kerb appeal and adds a protective layer against weather damage. Painting garden rails and gates not only makes them look smarter but also helps prevent rust and wear. Fence painting keeps timber strong, protected from rot, and looking clean and well cared for. Regular exterior decorating helps your property stay attractive, increases its lifespan, and reduces the need for costly repairs caused by weather, damp and general wear and tear..</p>
 <img src="/images/house-before-after.webp"
 alt="Exterior painting in Doncaster including houses, metal garden rails, gates and wooden fencing"
@@ -163,34 +163,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 4 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>uPVC Restoration</h2>
+<h2>uPVC Restoration Doncaster</h2>
 <p>uPVC restoration is all about bringing tired, dirty frames and doors back to life. Over time, uPVC can become stained, dull and discoloured from weather, pollution and everyday wear. Professional cleaning restores the original look, making windows and doors bright, fresh and well cared for. This also includes cleaning fascias and guttering to the highest possible standard, improving the overall appearance of your home. Regular uPVC restoration not only makes your property look better but also helps extend the life of your fittings by keeping them clean, protected and properly maintained.</p>
 <img src="/images/upvc-restoration.webp"
 alt="uPVC restoration in Doncaster with detailed cleaning of frames, doors, fascias and guttering"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- Section 5 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Conservatory Valets</h2>
-<p>Conservatory valets provide a thorough and detailed clean for your uPVC conservatory, both inside and out. This service includes washing the glass panels, frames, roof, and sills, removing dirt, algae, and water marks that build up over time. Every corner is carefully attended to, ensuring a spotless finish and restoring the conservatory’s original brightness. Regular conservatory valets help maintain the structure, protect the uPVC, and keep your space looking fresh, inviting, and well cared for all year round.</p>
-<img src="/images/conservatory-before-after.webp"
-alt="Full conservatory valet in Doncaster including inside and outside cleaning of glass, frames and roof"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- Section 6 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Regular Window Cleaning</h2>
-<p>Regular window cleaning keeps your home or business looking smart, bright and well maintained. Clean windows let in more natural light and improve the overall appearance of your property. A reliable regular service means your windows are kept consistently clear without you having to worry about it. Frames, sills and glass are cleaned thoroughly, removing dirt, dust and marks left by weather and traffic. Whether you need monthly, fortnightly or scheduled visits, regular window cleaning helps protect your windows, keeps them looking their best and saves you time and effort.</p>
-<img src="/images/window-cleaning-service.webp"
-alt="Regular window cleaning in Doncaster for homes and business with clear, streak free results"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
